[Qt][Wk2] Many tests are flaky on Qt 5.1 https://bugs.webkit.org/show_bug.cgi?id=118232

Reviewed by Jocelyn Turcotte.

We need to set renderToOffscreenBuffer since we won't otherwise get
the paint calls necessary to synchronize UI- and Web-Process. It was
only disabled in Qt 5.0 because it conflicted with setRenderWithoutShowing
which is no longer supported or needed.

* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::WrapperWindow::handleStatusChanged):

Canonical link: https://commits.webkit.org/138373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154733 268f45cc-cd09-0410-ab3c-d52691b4dbfc